[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/bomb.gd" type="Script" id=1]
[ext_resource path="res://gfx/bomb.png" type="Texture" id=2]
[ext_resource path="res://gfx/smoke_particle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=3]

length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explosions/Explosion1:config/emitting")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Explosions/Explosion2:config/emitting")
tracks/1/interp = 1
tracks/1/keys = { "cont":false, "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Explosions/Explosion3:config/emitting")
tracks/2/interp = 1
tracks/2/keys = { "cont":false, "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/3/type = "value"
tracks/3/path = NodePath("Explosions/Explosion4:config/emitting")
tracks/3/interp = 1
tracks/3/keys = { "cont":false, "times":FloatArray( 0, 0.4 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visibility/opacity")
tracks/4/interp = 1
tracks/4/keys = { "cont":true, "times":FloatArray( 0, 0.9 ), "transitions":FloatArray( 1, 1 ), "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "Loop"
length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 2
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "values":[ Color( 1, 1, 1, 1 ), Color( 1, 0.384958, 0.384958, 1 ) ] }

[sub_resource type="ColorRamp" id=4]

offsets = FloatArray( 0, 0.1, 0.7, 1 )
colors = ColorArray( 1, 1, 1, 0, 0.351123, 0.0962784, 0, 0.585526, 0.599826, 0.405306, 0.202686, 0.123543, 0, 0, 0, 0 )

[sub_resource type="ColorRamp" id=5]

offsets = FloatArray( 0, 0.1, 0.7, 1 )
colors = ColorArray( 1, 1, 1, 0, 0.351123, 0.0962784, 0, 0.585526, 0.599826, 0.405306, 0.202686, 0.123543, 0, 0, 0, 0 )

[sub_resource type="ColorRamp" id=6]

offsets = FloatArray( 0, 0.1, 0.7, 1 )
colors = ColorArray( 1, 1, 1, 0, 0.351123, 0.0962784, 0, 0.585526, 0.599826, 0.405306, 0.202686, 0.123543, 0, 0, 0, 0 )

[sub_resource type="ColorRamp" id=7]

offsets = FloatArray( 0, 0.1, 0.7, 1 )
colors = ColorArray( 1, 1, 1, 0, 0.351123, 0.0962784, 0, 0.585526, 0.599826, 0.405306, 0.202686, 0.123543, 0, 0, 0, 0 )

[node name="bomb" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, -0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.888889
transform/scale = Vector2( 1.33133, 1.33133 )
texture = ExtResource( 2 )
modulate = Color( 1, 0.624682, 0.624682, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = -1

[node name="ray_check_top" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -64 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_bottom" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, 64 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_check_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -64, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="ray_overlap" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 8 )
layer_mask = 1
type_mask = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Explode = SubResource( 3 )
anims/Loop = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Loop"

[node name="Explosions" type="Node2D" parent="."]

visibility/blend_mode = 2

[node name="Explosion1" type="Particles2D" parent="Explosions"]

visibility/behind_parent = true
visibility/blend_mode = 1
transform/pos = Vector2( 2.03434e-06, -64 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/half_extents = Vector2( 15, 15 )
config/local_space = false
config/explosiveness = 0.05
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 80.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 366.3
params/initial_angle = 1.0
params/initial_size = 0.7
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 4 )

[node name="Explosion2" type="Particles2D" parent="Explosions"]

visibility/behind_parent = true
visibility/blend_mode = 1
transform/pos = Vector2( 64, 3.8147e-06 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/half_extents = Vector2( 15, 15 )
config/local_space = false
config/explosiveness = 0.05
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 80.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 366.3
params/initial_angle = 1.0
params/initial_size = 0.7
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 5 )

[node name="Explosion3" type="Particles2D" parent="Explosions"]

visibility/behind_parent = true
visibility/blend_mode = 1
transform/pos = Vector2( 1.78036e-06, 64 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/half_extents = Vector2( 15, 15 )
config/local_space = false
config/explosiveness = 0.05
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 80.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 366.3
params/initial_angle = 1.0
params/initial_size = 0.7
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 6 )

[node name="Explosion4" type="Particles2D" parent="Explosions"]

visibility/behind_parent = true
visibility/blend_mode = 1
transform/pos = Vector2( -64, 3.8147e-06 )
transform/rot = 180.0
config/amount = 16
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/half_extents = Vector2( 15, 15 )
config/local_space = false
config/explosiveness = 0.05
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 80.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 366.3
params/initial_angle = 1.0
params/initial_size = 0.7
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 7 )

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


